tests/fixtures/invalid/int_bitxor_float.py
# Test int bitwise XOR with float (should fail)
x: int = 5
y: float = 3.14
result: int = x ^ y
